add entity and repository from other project

--- a/src/main/resources/templates/hi.html
+++ b/src/main/resources/templates/hi.html
@@ -9,9 +9,8 @@
 
 <div class="padding-site product-table">
     <h3>Products</h3>
-    <p th:text="${test}">
-    </p>
-    <!--    <table border="1">
+    <span th:text="${testModel}"></span>
+        <table border="1">
 
             <thead>
             <tr>
@@ -29,7 +28,7 @@
             </tr>
             </tbody>
 
-        </table>-->
+        </table>
 
 </div>
 
