--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,9 +44,10 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
+    background-color: #f9f9f9;
 }
 
 .header-contacts h2 {
@@ -68,9 +69,9 @@ body {
 }
 
 .menu {
-    display: flex !important;
-    list-style-type: none !important;
-    margin-top: 57px !important;
+    display: flex;
+    list-style-type: none;
+    margin-top: 57px;
 }
 
 .menu a {
@@ -79,6 +80,7 @@ body {
     font-size: 14px;
     font-weight: 300;
     text-decoration: none;
+    text-transform: uppercase;
 }
 
 .menu a:hover {
@@ -494,6 +496,8 @@ nav {
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 3.6px;
+    margin: 0 25px 0 0;
+    width: 200px;
 }
 
 .order-button:hover {
@@ -503,6 +507,12 @@ nav {
 .order-button:active {
     position: relative;
     top: 2px;
+}
+
+.button-panel {
+    display: flex;
+    justify-content: flex-start;
+    margin: 25px 0;
 }
 
 .hot-deal {
@@ -707,8 +717,12 @@ nav {
 }
 
 .footer {
-    height: 384px;
-    background-color: #f7f7f7;
+    /*height: 384px;*/
+    background-color: #f9f9f9;
+}
+
+footer {
+    margin: 20px 98px 0 98px;
 }
 
 .footer-top {
@@ -982,10 +996,63 @@ button .svg-inline--fa.fa-w-14:hover {
 }
 
 .error {
+    color: red;
+}
+
+.chamber-table {
+    width: 800px;
+    margin: 10px 185px;
+    border-width: 1px;
+}
+
+.chamber-table tbody tr:nth-last-of-type(2n) {
+    background-color: #c7c7c7;
+}
+
+.chamber-table tbody tr:hover {
+    background-color: #adadad;
+    cursor: pointer;
+}
+
+.chamber-table .id-column {
+    width: 50px;
+}
+
+.chamber-table .name-column {
+    width: 300px;
+}
+
+.chamber-table .region-name-column {
+    width: 200px;
+}
+
+.chamber-table .district-name-column {
+    width: 100px;
+}
+
+.chamber-table .edit-column {
+    width: 150px;
+}
+
+.table-head {
+    margin: 10px 185px;
+}
+
+.lang-icon {
+    position: absolute;
+    width: 45px;
+    top: 10px;
+    left: 15px;
+    cursor: pointer;
+}
+
+.login {
+    width: 800px;
+    margin: 10px 185px;
+    border-width: 1px;
     display: flex;
-    justify-content: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .login-body {
@@ -993,17 +1060,13 @@ button .svg-inline--fa.fa-w-14:hover {
     background-size: 100%
 }
 
-.login {
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    text-align: center;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
 
+
+.login h2 {
+    margin-bottom: 25px;
 }
 
-.login input, .login textarea {
+.login input {
     margin-bottom: 30px;
     width: 200px;
     border-radius: 22.5px;
@@ -1015,14 +1078,13 @@ button .svg-inline--fa.fa-w-14:hover {
     font-weight: 700;
     text-align: center;
     text-decoration: none;
-    text-transform: uppercase;
     letter-spacing: 3.6px;
-    resize: none;
 }
 
 .login-button {
     width: 100px;
     background-color: #f7f7f7;
+    margin-bottom: 30px;
 
 }
 
@@ -1035,61 +1097,10 @@ button .svg-inline--fa.fa-w-14:hover {
     top: 2px;
 }
 
-.login input:active, .login input:focus, .login textarea:active, .login textarea:focus {
+.login input:active, .login input:focus {
     outline: none;
 }
 
-.login input:focus, .login textarea:focus {
+.login input:focus {
     background-color: antiquewhite;
-}
-
-.product-table {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.product-table .category-column {
-    width: 70px;
-}
-
-.product-table .name-column {
-    width: 100px;
-}
-
-.product-table .description-column {
-    width: 306px;
-}
-
-.product-table .image-column {
-    width: 100px;
-}
-
-.product-table .image-column img {
-    width: 98px;
-}
-
-.remove-column {
-    width: 100px;
-}
-
-.count-column input {
-    width: 50px;
-}
-
-.order-product-number, .order-product-id, .count-column {
-    width: 60px;
-}
-
-.order-product-number, .order-product-id, .count-column, .count-column input, .count-column textarea, .total-column, remove-column {
-    text-align: center;
-}
-
-.total-column {
-    width: 100px;
-}
-
-thead tr td {
-    font-weight: bold;
-    text-align: center;
 }
