add fragment footer

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,5 +21,32 @@
 </header>
 
 
+<footer th:fragment="footer">
+    <div class="footer">
+        <div class="footer-bottom">
+
+            <div class="copyright">
+                &copy;&nbsp;Copyright&nbsp;&mdash; INTERIOR 2016. All Rights Reserved.
+            </div>
+
+            <div class="social-networks">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-google-plus-g"></i>
+                <i class="fab fa-pinterest-p"></i>
+            </div>
+
+            <div class="terms">
+                <a href="#">Terms &amp;&nbsp;Conditions</a>
+                /
+                <a href="#">Privacy policy &amp;&nbsp;Cookies</a>
+            </div>
+
+        </div>
+    </div>
+
+
+</footer>
+
 </body>
 </html>
