--- a/src/main/resources/templates/chambers.html
+++ b/src/main/resources/templates/chambers.html
@@ -6,21 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/style.css"/>
 
-    <script>
-        var chamberBody =
-            "                    <tr class='click-row' data-href=''>" +
-            "                        <td class='id-column'></td>" +
-            "                        <td class='name-column'></td>" +
-            "                        <td class='address-column'></td>" +
-            "                    </tr>";
-        var number = 20;
-        var order = "ASC";
-        var orderBy = "name";
-        var pageCounter = 0;
-    </script>
-
     <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
-    <script language="JavaScript" type="text/javascript" src="getData.js"></script>
+    <script language="JavaScript" type="text/javascript" src="/getChambers.js"></script>
 
 </head>
 
@@ -35,9 +22,9 @@
         <table border="1" class="chamber-table">
             <thead>
             <tr>
-                <td><strong>ID</strong></td>
-                <td><strong>NAME</strong></td>
-                <td><strong>ADDRESS</strong></td>
+                <th><strong>ID</strong></th>
+                <th><strong>NAME</strong></th>
+                <th><strong>ADDRESS</strong></th>
             </tr>
             </thead>
 
