--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,8 +12,10 @@
     <div class="header">
         <nav>
             <ul class="menu">
-                <li><a href="hi">test</a></li>
-                <li><a href="#">other</a></li>
+                <li><a href="/">home</a></li>
+                <li><a href="/hi">test</a></li>
+                <li><a href="/chambers">js-table</a></li>
+                <li><a href="/getChambers">restData</a></li>
                 <li><img class="lang-icon" th:src="'img/' + ${#locale} + '.png'" alt="lang" src="1.png"></li>
             </ul>
         </nav>
