removed special class wrapper for json given about chambers

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,8 +15,8 @@
                 <li><a href="/">home</a></li>
                 <li><a href="/hi">test</a></li>
                 <li><a href="/chambers">js-table</a></li>
-                <li><a href="/getChambers">restData</a></li>
-                <li><img class="lang-icon" th:src="'img/' + ${#locale} + '.png'" alt="lang" src="1.png"></li>
+                <li><a href="/rest/getChambers">restData</a></li>
+                <li><img class="lang-icon" th:src="'img/' + ${#locale} + '.png'" alt="lang" src=""></li>
             </ul>
         </nav>
     </div>
