--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css"/>
 
     <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
-    <script language="JavaScript" type="text/javascript" src="/getChambers.js"></script>
+    <script language="JavaScript" type="text/javascript" src="/viewChamber.js"></script>
 
 </head>
 
@@ -20,26 +20,22 @@
 
 
         <table border="1" class="chamber-table">
-            <thead>
-            <tr>
-                <th><strong>ID</strong></th>
-                <th><strong>NAME</strong></th>
-                <th><strong>ADDRESS</strong></th>
-            </tr>
-            </thead>
-
             <tbody>
-            <tr class='click-row' data-href=''>
-                <td class='id-column'></td>
-                <td class='name-column'></td>
-                <td class='address-column'></td>
-            </tr>
-            <tr class='click-row' data-href=''>
-                <td class='id-column'></td>
-                <td class='name-column'></td>
-                <td class='address-column'></td>
+            <tr>
+                <td><strong>ID</strong></td>
+                <td id="id-row"></td>
+
             </tr>
 
+            <tr>
+                <td><strong>NAME</strong></td>
+                <td id="name-row"></td>
+            </tr>
+
+            <tr>
+                <td><strong>ADDRESS</strong></td>
+                <td id="address-row"></td>
+            </tr>
 
             </tbody>
         </table>
