added internationalized headings to tables

--- a/src/main/resources/templates/chambers.html
+++ b/src/main/resources/templates/chambers.html
@@ -21,9 +21,9 @@
 
             <thead>
             <tr>
-                <th><strong>ID</strong></th>
-                <th><strong>NAME</strong></th>
-                <th><strong>ADDRESS</strong></th>
+                <th th:text="#{table_chamber_id}"></th>
+                <th th:text="#{table_chamber_name}"></th>
+                <th th:text="#{table_chamber_address}"></th>
             </tr>
             </thead>
 
