--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -21,19 +21,19 @@
 
         <table border="1" class="chamber-table">
             <tbody>
-            <tr>
-                <td><strong>ID</strong></td>
-                <td id="id-row"></td>
 
+            <tr>
+                <td th:text="#{table_chamber_id}"></td>
+                <td id="id-row"></td>
             </tr>
 
             <tr>
-                <td><strong>NAME</strong></td>
+                <td th:text="#{table_chamber_name}"></td>
                 <td id="name-row"></td>
             </tr>
 
             <tr>
-                <td><strong>ADDRESS</strong></td>
+                <td th:text="#{table_chamber_address}"></td>
                 <td id="address-row"></td>
             </tr>
 
