--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,19 +4,49 @@
     <title>Spring Boot and Thymeleaf example</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/style.css"/>
-
 </head>
 <body>
 
 <header th:fragment="header" class="padding-site">
+
+
     <div class="header">
+        <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
+        <script>
+            $(document).ready(
+                function () {
+
+                    let currentLang = '[[${#locale}]]';
+                    // alert(currentLang);
+                    var data = (currentLang === "ru_RU") ? "en_GB" : "ru_RU";
+                    var langImgSrc = 'img/' + currentLang + ".png";
+                    $(document).find(".lang-icon").attr("src", langImgSrc);
+
+                    $(".lang-icon").click(function () {
+                        $.ajax({
+                            url: '',
+                            type: 'GET',
+                            data: {
+                                lang: data
+                            },
+                            cache: false,
+                            success: function () {
+                                location.reload();
+                            }
+                        });
+                    });
+                }
+            );
+        </script>
+
+
         <nav>
             <ul class="menu">
                 <li><a href="/">home</a></li>
                 <li><a href="/hi">test</a></li>
                 <li><a href="/chambers">js-table</a></li>
                 <li><a href="/rest/getChambers">restData</a></li>
-                <li><img class="lang-icon" th:src="'img/' + ${#locale} + '.png'" alt="lang" src=""></li>
+                <li><img class="lang-icon" alt="lang" src=""></li>
             </ul>
         </nav>
     </div>
