--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <title>Spring Boot and Thymeleaf example</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -46,8 +47,12 @@
                 <li><a href="/hi">test</a></li>
                 <li><a href="/chambers">js-table</a></li>
                 <li><a href="/rest/getChambers">restData</a></li>
-                <li><a href="/logout">logout</a></li>
-                <li><a href="/login">login</a></li>
+                <li sec:authorize="isAnonymous()"><a href="/login">login</a></li>
+                <li sec:authorize="isAuthenticated()">
+
+                    <a href="#" th:text="${#authentication.name + '(' + #authentication.principal.authorities[0] + ')'}">logout</a>
+                </li>
+                <li sec:authorize="isAuthenticated()"><a href="/logout">logout</a></li>
                 <li><img class="lang-icon" alt="lang" src=""></li>
             </ul>
         </nav>
