--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -488,11 +488,11 @@ nav {
     margin-bottom: 34px;
 }
 
-.order-button {
+.link-button {
     border-radius: 22.5px;
     background-color: #ffffff;
     box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
-    padding: 10px 31px;
+    padding: 10px 49px;
     color: #212121;
     font-size: 18px;
     font-weight: 700;
@@ -504,11 +504,11 @@ nav {
     width: 200px;
 }
 
-.order-button:hover {
+.link-button:hover {
     background-color: #f7f7f7;
 }
 
-.order-button:active {
+.link-button:active {
     position: relative;
     top: 2px;
 }
@@ -960,7 +960,7 @@ button .svg-inline--fa.fa-w-14:hover {
     text-align: center;
 }
 
-.product-description .order-button {
+.product-description .link-button {
     font-size: 22px;
     background-color: #f44336;
     border-radius: 37px;
@@ -970,16 +970,16 @@ button .svg-inline--fa.fa-w-14:hover {
     position: relative;
 }
 
-.product-description .order-button:active {
+.product-description .link-button:active {
     position: relative;
     top: 2px;
 }
 
-.product-description .order-button:hover {
+.product-description .link-button:hover {
     background-color: #e53935;
 }
 
-.product-description .order-button img {
+.product-description .link-button img {
     width: 15px;
     height: 24px;
     position: absolute;
@@ -1106,6 +1106,7 @@ button .svg-inline--fa.fa-w-14:hover {
 
 .login-button {
     margin-left: 35px !important;
+    text-transform: uppercase;
 }
 
 .login-button:hover {
