--- a/src/main/resources/templates/chambers.html
+++ b/src/main/resources/templates/chambers.html
@@ -20,9 +20,9 @@
 
             <thead>
             <tr>
-                <th th:text="#{table_chamber_id}"></th>
-                <th th:text="#{table_chamber_name}"></th>
-                <th th:text="#{table_chamber_address}"></th>
+                <th th:text="#{table.chamber.id}"></th>
+                <th th:text="#{table.chamber.name}"></th>
+                <th th:text="#{table.chamber.address}"></th>
             </tr>
             </thead>
 
@@ -41,7 +41,6 @@
 
     </div>
 </div>
-
 
 </body>
 </html>
