--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text="#{table_chamber_name}"></title>
+    <title th:text="#{table.chamber.name}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
@@ -23,17 +23,17 @@
             <tbody>
 
             <tr>
-                <td th:text="#{table_chamber_id}"></td>
+                <td th:text="#{table.chamber.id}"></td>
                 <td id="id-row"></td>
             </tr>
 
             <tr>
-                <td th:text="#{table_chamber_name}"></td>
+                <td th:text="#{table.chamber.name}"></td>
                 <td id="name-row"></td>
             </tr>
 
             <tr>
-                <td th:text="#{table_chamber_address}"></td>
+                <td th:text="#{table.chamber.address}"></td>
                 <td id="address-row"></td>
             </tr>
 
