--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,8 +16,9 @@
         <div class="login">
             <h2 th:text="#{login.page.title}"></h2>
             <form th:action="@{/login}" method="post">
-                <div><input type="text" value="admin" name="login" th:placeholder="#{label.login}"/></div>
-                <div><input type="password" value="admin@123" name="password" th:placeholder="#{label.password}"/></div>
+
+                <div><input type="text" value="admin" name="login" th:placeholder="#{label.login}"></div>
+                <div><input type="password" value="admin@123" name="password" th:placeholder="#{label.password}"></div>
                 <div><input class="login-button" type="submit" name="commit" th:value="#{button.login}"/></div>
 
                 <div><a class="link-button" href="registration" th:text="#{button.registration}">Registration</a></div>
