--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div th:replace="fragments :: header"></div>
     <div class="padding-site product-table">
-
+        <p>test commit for the Deploy via Github</p>
         <h3 th:text="${chambersCount}"></h3>
 
         <table border="1" class="chamber-table">
